--- a/index.html
+++ b/index.html
@@ -15,11 +15,53 @@
 </head>
 
 <body>
-    <h1>TITLe</h1>
+
+  <!-----------------------------    Creating responsive Menu -------------------------->
+
+    <div id='menu'>
+      <nav>
+          <div class="logo">
+              <h4>Paweł Pilarczyk</h4>
+          </div>
+          <ul class="nav-links">
+              <li><a href="#home">Home</a></li>
+              <li><a href="#">Porfolio</a></li>
+              <li><a href="#">About Me</a></li>
+              <li><a href="#">Contact</a></li>
+          </ul>
+          <div class="burger">
+              <div class="line1"></div>
+              <div class="line2"></div>
+              <div class="line3"></div>
+          </div>
+      </nav>
+  </div>
+
+  <!--------------------------------   Menu END  ------------------------------->
+
+
+  <!--------------------------------  Home Content  ------------------------------->
+  <div id="home">
+    <h1>Paweł Pilarczyk</h1>
+    <h2>Frontend developer</h2>
+    <ul>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+    </ul>
+  </div>
+  <!--------------------------------  Home Ends  ------------------------------->
+
+  <div id="about">
+
+  </div>
 </body>
+
 
     <!--    Adding scripts + JQ -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="scripts/scripts.js"></script>
+
 
 </html>
