--- a/index.html
+++ b/index.html
@@ -44,11 +44,16 @@
   <div id="home">
     <h1>Paweł Pilarczyk</h1>
     <h2>Frontend developer</h2>
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-      <li></li>
+
+    <div class='buttons-div'>
+      <a href='#'><button>Kontakt</button></a>
+      <div></div>
+      <a href="#"><button>Projekty</button></a>
+    </div>
+    <ul id='icons'>
+      <li><img src="./media/pictures/ico1.png"></img></li>
+      <li><img src="./media/pictures/ico2.png"></img></li>
+      <li><img src="./media/pictures/ico3.png"></img></li>
     </ul>
   </div>
   <!--------------------------------  Home Ends  ------------------------------->
