--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
           <ul class="nav-links">
               <li><a href="#home">Home</a></li>
-              <li><a href="#">Porfolio</a></li>
+              <li><a href="#portfolio">Porfolio</a></li>
               <li><a href="#">About Me</a></li>
               <li><a href="#">Contact</a></li>
           </ul>
@@ -58,7 +58,7 @@
   </div>
   <!--------------------------------  Home Ends  ------------------------------->
 
-  <div id="about">
+  <div id="portfolio">
 
   </div>
 </body>
