--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta name="author" content="Pawel Pilarczyk">
 
     <!--    Adding styles -->
-  <link rel="stylesheet" href="/styles/styles.css">
+  <link rel="stylesheet" href="./styles/styles.css">
 
 </head>
 
@@ -66,7 +66,7 @@
 
     <!--    Adding scripts + JQ -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="scripts/scripts.js"></script>
+    <script src="./scripts/scripts.js"></script>
 
 
 </html>
