--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
   <!-----------------------------    Creating responsive Menu -------------------------->
 
-    <div id='menu'>
       <nav>
           <div class="logo">
               <h4>Paweł Pilarczyk</h4>
@@ -36,32 +35,55 @@
               <div class="line3"></div>
           </div>
       </nav>
-  </div>
 
   <!--------------------------------   Menu END  ------------------------------->
 
 
   <!--------------------------------  Home Content  ------------------------------->
   <div id="home">
-    <h1>Paweł Pilarczyk</h1>
-    <h2>Frontend developer</h2>
+
+    <h1>Front-End developer</h1>
+    <h2>Paweł Pilarczyk</h2>
+
 
     <div class='buttons-div'>
       <a href='#'><button>Kontakt</button></a>
       <div></div>
       <a href="#"><button>Projekty</button></a>
     </div>
+
     <ul id='icons'>
       <li><img src="./media/pictures/ico1.png"></img></li>
       <li><img src="./media/pictures/ico2.png"></img></li>
       <li><img src="./media/pictures/ico3.png"></img></li>
+
     </ul>
   </div>
   <!--------------------------------  Home Ends  ------------------------------->
 
+  <!--------------------------------  Portfolio/Projects Start  ------------------------------->
   <div id="portfolio">
 
+    <h1>Projekty:</h1>
+
+      <div id="projects-list">
+
+        <div class='project'>
+          <div class='project-info'>
+
+          </div>
+
+          <div class="project-cover">
+          </div>
+        </div>
+
+      </div>
+
+
   </div>
+  <!--------------------------------  Portfolio/Projects Ends  ------------------------------->
+
+
 </body>
 
 
