--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <!--    Adding styles -->
 
   <link rel="stylesheet" href="./styles/styles.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap" rel="stylesheet">
 
 </head>
 
@@ -64,20 +66,87 @@
   <!--------------------------------  Portfolio/Projects Start  ------------------------------->
   <div id="portfolio">
 
-    <h1>Projekty:</h1>
+      <h1>Projekty:</h1>
 
       <div id="projects-list">
 
+        <!--------------------------------  Project 1  ------------------------------->
         <div class='project'>
+
+          <div class="project-cover .project1"></div>
+
           <div class='project-info'>
-
+              <h1>Title</h1>
+              <ul>
+                <h1>Technologies</h1>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JS</li>
+              </ul>
+              <a href=''>GITHUB</a>
+              <a href=''>Live site</a>
           </div>
 
-          <div class="project-cover">
+        </div>
+
+
+        <div class='project'>
+
+          <div class="project-cover"></div>
+
+          <div class='project-info'>
+              <h1>Title</h1>
+              <ul>
+                <h1>Technologies</h1>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JS</li>
+              </ul>
+              <a href=''>GITHUB</a>
+              <a href=''>Live site</a>
           </div>
+
+        </div>
+
+        <div class='project'>
+
+          <div class="project-cover"></div>
+
+          <div class='project-info'>
+              <h1>Title</h1>
+              <ul>
+                <h1>Technologies</h1>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JS</li>
+              </ul>
+              <a href=''>GITHUB</a>
+              <a href=''>Live site</a>
+          </div>
+
+        </div>
+
+        <div class='project'>
+
+          <div class="project-cover"></div>
+
+          <div class='project-info'>
+              <h1>Title</h1>
+              <ul>
+                <h1>Technologies</h1>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JS</li>
+              </ul>
+              <a href=''>GITHUB</a>
+              <a href=''>Live site</a>
+          </div>
+
         </div>
 
       </div>
+
+    </div>
 
 
   </div>
