--- a/index.html
+++ b/index.html
@@ -73,20 +73,17 @@
         <!--------------------------------  Project 1  ------------------------------->
         <div class='project'>
 
-          <div class="project-cover .project1"></div>
+          <div class="project-cover "></div>
 
-          <div class='project-info'>
-              <h1>Title</h1>
-              <ul>
-                <h1>Technologies</h1>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JS</li>
-              </ul>
-              <a href=''>GITHUB</a>
-              <a href=''>Live site</a>
-          </div>
-
+          <h1>Title</h1>
+          <h2>Technologies</h2>
+          <ul>
+            <li>HTML5</li>
+            <li>CSS3</li>
+            <li>JS</li>
+          </ul>
+          <a href='#'>GITHUB</a>
+          <a href='#'>Live site</a>
         </div>
 
 
