--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       <div id="projects-list">
 
         <!--------------------------------  Project 1  ------------------------------->
-        <div class='project'>
+        <div class='project project1'>
 
           <div class="project-cover "></div>
 
@@ -87,7 +87,7 @@
         </div>
 
 
-        <div class='project'>
+        <div class='project project2'>
 
           <div class="project-cover"></div>
 
@@ -105,7 +105,7 @@
 
         </div>
 
-        <div class='project'>
+        <div class='project project3'>
 
           <div class="project-cover"></div>
 
@@ -123,7 +123,43 @@
 
         </div>
 
-        <div class='project'>
+        <div class='project project4'>
+
+          <div class="project-cover"></div>
+
+          <div class='project-info'>
+              <h1>Title</h1>
+              <ul>
+                <h1>Technologies</h1>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JS</li>
+              </ul>
+              <a href=''>GITHUB</a>
+              <a href=''>Live site</a>
+          </div>
+
+        </div>
+
+        <div class='project project5'>
+
+          <div class="project-cover"></div>
+
+          <div class='project-info'>
+              <h1>Title</h1>
+              <ul>
+                <h1>Technologies</h1>
+                <li>HTML5</li>
+                <li>CSS3</li>
+                <li>JS</li>
+              </ul>
+              <a href=''>GITHUB</a>
+              <a href=''>Live site</a>
+          </div>
+
+        </div>
+
+        <div class='project project6'>
 
           <div class="project-cover"></div>
 
@@ -149,7 +185,22 @@
   </div>
   <!--------------------------------  Portfolio/Projects Ends  ------------------------------->
 
+  <!--------------------------------  About me Starts  ------------------------------->
+  <div id="about-me">
+      <h1>O mnie</h1>
 
+      <div id="description">
+        <h1>Paweł Pilarczyk</h1>
+
+      </div>
+
+      <div id="cv-photo">
+        <img src="./media/pictures/CV_Photo.png" alt="Paweł Pilarczyk">
+
+      </div>
+  </div>
+
+  <!--------------------------------  About me Ends  ------------------------------->
 </body>
 
 
