--- a/index.html
+++ b/index.html
@@ -54,19 +54,17 @@
       <a href="#"><button>Projekty</button></a>
     </div>
 
-    <ul id='icons'>
-      <li><img src="./media/pictures/ico1.png"></img></li>
-      <li><img src="./media/pictures/ico2.png"></img></li>
-      <li><img src="./media/pictures/ico3.png"></img></li>
-
-    </ul>
   </div>
   <!--------------------------------  Home Ends  ------------------------------->
 
   <!--------------------------------  Portfolio/Projects Start  ------------------------------->
   <div id="portfolio">
+      <div>
+        <div></div>
+        <h1>PROJEKTY</h1>
+        <div></div>
+      </div>
 
-      <h1>Projekty:</h1>
 
       <div id="projects-list">
 
@@ -187,8 +185,27 @@
 
   <!--------------------------------  About me Starts  ------------------------------->
   <div id="about-me">
-  
+
       <h1>O mnie</h1>
+      <p>Nazywam się Paweł Pilarczyk i moim celem zawodowym jest zostanie Front-End Developerem</p>
+      <span>
+
+        <div>
+          <img src="" alt="">
+          <p></p>
+        </div>
+
+        <div>
+          <img src="" alt="">
+          <p></p>
+        </div>
+
+        <div>
+          <img src="" alt="">
+          <p></p>
+        </div>
+
+      </span>
 
   </div>
 
