--- a/index.html
+++ b/index.html
@@ -187,29 +187,41 @@
   <div id="about-me">
 
       <h1>O mnie</h1>
-      <p>Nazywam się Paweł Pilarczyk i moim celem zawodowym jest zostanie Front-End Developerem</p>
+      <p>Cześć! Nazywam się Paweł Pilarczyk i moim celem zawodowym jest zostanie Front-End Developerem</p>
       <span>
 
         <div>
-          <img src="" alt="">
-          <p></p>
+          <img src="./media/pictures/ico1.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lorem neque. Integer eu aliquam felis. Nullam malesuada ex ut nibh mattis, in efficitur est tristique. In tristique quam et lobortis tempus. Praesent euismod ex quis quam efficitur consequat. Morbi non dolor varius, auctor urna quis, euismod urna. Nullam sagittis nisl ac magna tempus mattis.</p>
         </div>
 
         <div>
-          <img src="" alt="">
-          <p></p>
+          <img src="./media/pictures/ico2.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lorem neque. Integer eu aliquam felis. Nullam malesuada ex ut nibh mattis, in efficitur est tristique. In tristique quam et lobortis tempus. Praesent euismod ex quis quam efficitur consequat. Morbi non dolor varius, auctor urna quis, euismod urna. Nullam sagittis nisl ac magna tempus mattis.</p>
         </div>
 
         <div>
-          <img src="" alt="">
-          <p></p>
+          <img src="./media/pictures/ico3.png" alt="">
+          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lorem neque. Integer eu aliquam felis. Nullam malesuada ex ut nibh mattis, in efficitur est tristique. In tristique quam et lobortis tempus. Praesent euismod ex quis quam efficitur consequat. Morbi non dolor varius, auctor urna quis, euismod urna. Nullam sagittis nisl ac magna tempus mattis.</p>
         </div>
 
       </span>
 
   </div>
-
   <!--------------------------------  About me Ends  ------------------------------->
+
+
+  <!--------------------------------  Footer Starts ------------------------------->
+  <!--------------------------------  Footer Ends ------------------------------->
+  <div id="footer">
+      <span>
+        <p>Connect:</p>
+        <a href=""><img src="./media/pictures/GitHub-Mark-Light-64px.png" alt=""></a>
+        <a href=""><img src="./media/pictures/linkedin.png" alt=""></a>
+      </span>
+      <h1>Paweł Pilarczyk / pawelpilarczyk1@gmail.com </h1>
+  </div>
+
 </body>
 
 
