--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <ul class="nav-links">
               <li><a href="#home">Home</a></li>
               <li><a href="#portfolio">Porfolio</a></li>
-              <li><a href="#">About Me</a></li>
-              <li><a href="#">Contact</a></li>
+              <li><a href="#about-me">About Me</a></li>
+              <li><a href="#contact">Contact</a></li>
           </ul>
           <div class="burger">
               <div class="line1"></div>
@@ -241,8 +241,8 @@
   <div id="footer">
       <span>
         <p>Connect:</p>
-        <a href=""><img src="./media/pictures/GitHub-Mark-Light-64px.png" alt=""></a>
-        <a href=""><img src="./media/pictures/linkedin.png" alt=""></a>
+        <a target="_blank" href="https://github.com/Pawel-Pilarczyk"><img src="./media/pictures/GitHub-Mark-Light-64px.png" alt=""></a>
+        <a target="_blank" href="https://www.linkedin.com/in/pawe%C5%82-pilarczyk-b49a38196?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_contact_details%3BiL5vbPxkSU61wDLQ0c0x3Q%3D%3D"><img src="./media/pictures/linkedin.png" alt=""></a>
       </span>
       <h1>Paweł Pilarczyk / pawelpilarczyk1@gmail.com </h1>
   </div>
