--- a/index.html
+++ b/index.html
@@ -216,11 +216,11 @@
     <div id="form-div">
         <h1>Contact me</h1>
         <form id='contact-form'>
-            <input type="email" id="e-mail" required placeholder="email"></input><br/>
+            <input type="email" id="e-mail" required placeholder="  E-mail"></input><br/>
 
-            <input type="tel" id="phone" placeholder="phone number" required></input><br/>
+            <input type="tel" id="phone" placeholder="  Phone number" required></input><br/>
 
-            <textarea id="message" placeholder="Your message" required></textarea><br/>
+            <textarea id="message" placeholder="  Your message" required></textarea><br/>
             <input id="submit" type="submit" value="Submit" ></input>
         </form>
     </div>
