--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
 
     <div class='buttons-div'>
-      <a href='#'><button>Kontakt</button></a>
+      <a href='#contact'><button>Kontakt</button></a>
       <div></div>
-      <a href="#"><button>Projekty</button></a>
+      <a href="#portfolio"><button>Projekty</button></a>
     </div>
 
   </div>
