--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
           <ul class="nav-links">
               <li><a href="#home">Home</a></li>
               <li><a href="#portfolio">Porfolio</a></li>
-              <li><a href="#about-me">About Me</a></li>
-              <li><a href="#contact">Contact</a></li>
+              <li><a href="#about-me">O mnie</a></li>
+              <li><a href="#contact">Kontakt</a></li>
           </ul>
           <div class="burger">
               <div class="line1"></div>
@@ -188,21 +188,29 @@
 
       <h1>O mnie</h1>
       <p>Cześć! Nazywam się Paweł Pilarczyk i moim celem zawodowym jest zostanie Front-End Developerem</p>
+
       <span>
 
         <div>
-          <img src="./media/pictures/ico1.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lorem neque. Integer eu aliquam felis. Nullam malesuada ex ut nibh mattis, in efficitur est tristique. In tristique quam et lobortis tempus. Praesent euismod ex quis quam efficitur consequat. Morbi non dolor varius, auctor urna quis, euismod urna. Nullam sagittis nisl ac magna tempus mattis.</p>
+          <img src="./media/pictures/ico1.png" alt="HTML">
+          <p>
+            Język HTML towarzyszy mi od początku mojej drogi z komputerem - wszystko zaczęło się od pewnej lekcji informatyki...
+            Obecnie tworzę kod głównie pod strony responsywne oraz używając framweworków (Vue.js lub React), a wszystkie możliwie interakcje przenoszę do kaskadowych arkuszy stylów.
+          </p>
         </div>
 
         <div>
-          <img src="./media/pictures/ico2.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lorem neque. Integer eu aliquam felis. Nullam malesuada ex ut nibh mattis, in efficitur est tristique. In tristique quam et lobortis tempus. Praesent euismod ex quis quam efficitur consequat. Morbi non dolor varius, auctor urna quis, euismod urna. Nullam sagittis nisl ac magna tempus mattis.</p>
+          <img src="./media/pictures/ico2.png" alt="CSS3">
+          <p>
+            CSS3 oraz SCSS pomagają mi w codziennej pracy, jako narzędzia najadące wygląd i podstawowe animacje moim projektom. Tworzenie animacji oraz responsywnego design-u sprawia mi dużo satysfakcji
+          </p>
         </div>
 
         <div>
-          <img src="./media/pictures/ico3.png" alt="">
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eu lorem neque. Integer eu aliquam felis. Nullam malesuada ex ut nibh mattis, in efficitur est tristique. In tristique quam et lobortis tempus. Praesent euismod ex quis quam efficitur consequat. Morbi non dolor varius, auctor urna quis, euismod urna. Nullam sagittis nisl ac magna tempus mattis.</p>
+          <img src="./media/pictures/ico3.png" alt="JS">
+          <p>JavaScript odpowiada za całą logike moich projektów -> Od ciekawych animacji poprzez walidacje danych, kończąc na tworzeniu interaktywnych stron.
+            Obenie uczę się oraz używam nowoczesnych FrameWorków które są niezbędne na dziejszym rynku tj. <b>React oraz Vue.js</b>
+          </p>
         </div>
 
       </span>
