--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="./styles/styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 </head>
 
@@ -44,11 +45,11 @@
   <!--------------------------------  Home Content  ------------------------------->
   <div id="home">
 
-    <h1>Front-End developer</h1>
-    <h2>Paweł Pilarczyk</h2>
+    <h1 class="animate__animated animate__fadeInDown animate__delay-1s">Front-End developer</h1>
+    <h2 class="animate__animated animate__flipInX animate__delay-2s">Paweł Pilarczyk</h2>
 
 
-    <div class='buttons-div'>
+    <div class='buttons-div animate__animated animate__fadeInLeft animate__delay-3s'>
       <a href='#contact'><button>Kontakt</button></a>
       <div></div>
       <a href="#portfolio"><button>Projekty</button></a>
