--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
 
           <div class="project-cover "></div>
 
-          <h1>Title</h1>
-          <h2>Technologies</h2>
+          <h1>Kalkulator</h1>
+          <h2>Technologie</h2>
           <ul>
             <li>HTML5</li>
-            <li>CSS3</li>
+            <li>CSS3/BootStrap</li>
             <li>JS</li>
           </ul>
-          <a href='#'>GITHUB</a>
+          <a href='#' target="_blank">GITHUB</a>
           <a href='#'>Live site</a>
         </div>
 
@@ -223,19 +223,19 @@
   <!--------------------------------  Contact Starts  ------------------------------->
   <div id="contact">
     <div id="form-div">
-        <h1>Contact me</h1>
+        <h1>Skontaktuj sie ze mną</h1>
         <form id='contact-form'>
             <input type="email" id="e-mail" required placeholder="  E-mail"></input><br/>
 
             <input type="tel" id="phone" placeholder="  Phone number" required></input><br/>
 
             <textarea id="message" placeholder="  Your message" required></textarea><br/>
-            <input id="submit" type="submit" value="Submit" ></input>
+            <input id="submit" type="submit" value="Wyślij" ></input>
         </form>
     </div>
     <div id="details">
         <ul>
-            <h3>Contact Details</h3>
+            <h3>Kontakt</h3>
             <li>Pawel Pilarczyk</li>
             <li>+48 575-537-637</li>
             <li id="email-shortcut">pawelpilarczyk1@gmail.com</li>
