--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <li>CSS3/BootStrap</li>
             <li>JS</li>
           </ul>
-          <a href='#' target="_blank">GITHUB</a>
-          <a href='#'>Live site</a>
+          <a href='https://github.com/Pawel-Pilarczyk/calc' target="_blank">GITHUB</a>
+          <a href='https://pawel-pilarczyk.github.io/calc/' target="_blank">Live site</a>
         </div>
 
 
@@ -91,20 +91,21 @@
           <div class="project-cover"></div>
 
           <div class='project-info'>
-              <h1>Title</h1>
+              <h1>Budgetary APP</h1>
               <ul>
                 <h1>Technologies</h1>
                 <li>HTML5</li>
                 <li>CSS3</li>
-                <li>JS</li>
+                <li>JavaScript/Chart.js</li>
+                <li>React</li>
               </ul>
-              <a href=''>GITHUB</a>
-              <a href=''>Live site</a>
+              <a href='https://github.com/Pawel-Pilarczyk/budget-app' target="_blank">GITHUB</a>
+              <a href='https://pawel-pilarczyk.github.io/budget-app/' target="_blank">Live site</a>
           </div>
 
         </div>
 
-        <div class='project project3'>
+        <!-- <div class='project project3'>
 
           <div class="project-cover"></div>
 
@@ -174,7 +175,7 @@
               <a href=''>Live site</a>
           </div>
 
-        </div>
+        </div> -->
 
       </div>
 
@@ -195,7 +196,7 @@
         <div>
           <img src="./media/pictures/ico1.png" alt="HTML">
           <p>
-            Język HTML towarzyszy mi od początku mojej drogi z komputerem - wszystko zaczęło się od pewnej lekcji informatyki...
+            Język HTML towarzyszy mi od początku mojej pracy z komputerami - wszystko zaczęło się od pewnej lekcji informatyki...
             Obecnie tworzę kod głównie pod strony responsywne oraz używając framweworków (Vue.js lub React), a wszystkie możliwie interakcje przenoszę do kaskadowych arkuszy stylów.
           </p>
         </div>
