--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
         </div>
 
-        <!-- <div class='project project3'>
+        <div class='project project3'>
 
           <div class="project-cover"></div>
 
@@ -114,15 +114,16 @@
               <ul>
                 <h1>Technologies</h1>
                 <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JS</li>
+                <li>CSS3/SCSS</li>
+                <li>JS/Jquery</li>
               </ul>
-              <a href=''>GITHUB</a>
-              <a href=''>Live site</a>
+              <a href='https://github.com/Pawel-Pilarczyk/Portfolio' target="_blank">GITHUB</a>
+              <a href='#' target="_blank">Live site</a>
           </div>
 
         </div>
 
+        <!--
         <div class='project project4'>
 
           <div class="project-cover"></div>
