--- a/index.html
+++ b/index.html
@@ -123,25 +123,24 @@
 
         </div>
 
-        <!--
         <div class='project project4'>
 
           <div class="project-cover"></div>
 
           <div class='project-info'>
-              <h1>Title</h1>
+              <h1>To Do App with Vue.js</h1>
               <ul>
                 <h1>Technologies</h1>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JS</li>
+                <li>Vue/Vuex</li>
               </ul>
-              <a href=''>GITHUB</a>
-              <a href=''>Live site</a>
+              <a href='https://github.com/Pawel-Pilarczyk/ToDoList_vue'>GITHUB</a>
+              <a href='https://pawel-pilarczyk.github.io/ToDoList_vue/'>Live site</a>
           </div>
 
         </div>
 
+
+        <!--
         <div class='project project5'>
 
           <div class="project-cover"></div>
