--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
                 <h1>Technologies</h1>
                 <li>Vue/Vuex</li>
               </ul>
-              <a href='https://github.com/Pawel-Pilarczyk/ToDoList_vue'>GITHUB</a>
-              <a href='https://pawel-pilarczyk.github.io/ToDoList_vue/'>Live site</a>
+              <a href='https://github.com/Pawel-Pilarczyk/ToDoList_vue' target="_blank">GITHUB</a>
+              <a href='https://pawel-pilarczyk.github.io/To_do_List_deployment/' target="_blank">Live site</a>
           </div>
 
         </div>
