update new project

--- a/index.html
+++ b/index.html
@@ -139,43 +139,23 @@
 
         </div>
 
-
-        <!--
         <div class='project project5'>
 
           <div class="project-cover"></div>
 
           <div class='project-info'>
-              <h1>Title</h1>
+              <h1>Online Shop with with Vue.js/Vuex</h1>
               <ul>
                 <h1>Technologies</h1>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JS</li>
+                <li>Vue/Vuex/</li>
+                <li>Vue Router</li>
+                <li>SCSS</li>
               </ul>
-              <a href=''>GITHUB</a>
-              <a href=''>Live site</a>
+              <a href='https://github.com/Pawel-Pilarczyk/Online_shop' target="_blank">GITHUB</a>
+              <a href='https://pawel-pilarczyk.github.io/Online_shop_deploy/' target="_blank">Live site</a>
           </div>
-
         </div>
 
-        <div class='project project6'>
-
-          <div class="project-cover"></div>
-
-          <div class='project-info'>
-              <h1>Title</h1>
-              <ul>
-                <h1>Technologies</h1>
-                <li>HTML5</li>
-                <li>CSS3</li>
-                <li>JS</li>
-              </ul>
-              <a href=''>GITHUB</a>
-              <a href=''>Live site</a>
-          </div>
-
-        </div> -->
 
       </div>
 
